--- a/projeto_galo/css/style.css
+++ b/projeto_galo/css/style.css
@@ -22,11 +22,11 @@ header div nav ul li{
     background-color: rgba(32, 32, 32);
     transition: all 0.3s;
 }
-header a:link, header a:visited{
+header nav a:link, header a:visited{
     text-decoration: none;
     color:white;
 }
-header li:hover, header a:hover{
+header li:hover, header nav a:hover{
     cursor: pointer;
     color: darkgoldenrod;
     background-color: rgb(30, 30, 30);
@@ -44,7 +44,7 @@ header li:active{
     header div nav ul li{
         padding: 25px;
     }
-    header a{
+    header nav a{
         font-size: 18px;
     }
 }
