--- a/projeto_galo/css/style.css
+++ b/projeto_galo/css/style.css
@@ -4,6 +4,9 @@
     margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
+body{
+    background-color: rgb(65, 65, 65);
+}
 /* HEADER */
 header div{
     display: flex;
@@ -36,7 +39,27 @@ header li:active{
     transform: translateY(2px);
 }
 
+/* MAIN */
+section{
+    margin: auto;
+    background-color: white;
+}
+.começo div{
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+.começo h1{
+    text-align: center;
+    color: darkgoldenrod;
+}
+.começo p{
+    text-align: justify;
+    line-height: 20px;
+}
+
 @media screen and (min-width:767px) {
+    /* HEADER */
     header div{
         flex-direction: row;
         justify-content: space-between;
@@ -46,5 +69,8 @@ header li:active{
     }
     header nav a{
         font-size: 18px;
+    }
+    section{
+        width: 1200px;
     }
 }
