--- a/projeto_galo/css/style.css
+++ b/projeto_galo/css/style.css
@@ -75,6 +75,7 @@ section figcaption{
 .idolos figcaption{
     color:black;
     padding-top: 20px;
+    text-align: center;
 }
 .idolos h1 {
     font-size: 30px;
