--- a/projeto_galo/css/style.css
+++ b/projeto_galo/css/style.css
@@ -50,6 +50,7 @@ section figcaption{
     color: darkgoldenrod;
     margin-bottom: 10px;
 }
+
 .começo div{
     display: flex;
     flex-direction: column;
@@ -63,6 +64,12 @@ section figcaption{
     text-align: justify;
     line-height: 20px;
 }
+.inicio h1{
+    text-align: center;
+    color: darkgoldenrod;
+    padding: 5px 0px 10px;
+}
+
 
 .idolos>div{
     display: flex;
@@ -84,6 +91,27 @@ section figcaption{
 .idolos p{
     text-align: justify;
     padding: 10px;
+}
+.brasileiro>div{
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+.brasileiro>div p{
+    text-align: justify;
+    padding-bottom: 10px;
+}
+.brasileiro>div div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.brasileiro>div div img{
+    padding: 10px 0px;
+}
+.brasileiro>div div h2{
+    color:darkgoldenrod;
 }
 
 .rivais>div{
@@ -122,7 +150,6 @@ footer a:hover{
     cursor: pointer;
 }
 @media screen and (min-width:767px) {
-    /* HEADER */
     header div{
         flex-direction: row;
         justify-content: space-between;
@@ -133,8 +160,11 @@ footer a:hover{
     header nav a{
         font-size: 18px;
     }
+    
     section{
         width: 1200px;
+        margin: auto;
+        margin-top: 10px;
     }
     .começo>div{
         flex-direction: row;
@@ -145,6 +175,11 @@ footer a:hover{
         align-items: center;
         justify-content: center;
     }
+    .inicio h1{
+        padding-bottom: 15px;
+    }
+
+
     .idolos >div>div {
         display: flex;
         align-items: center;
@@ -158,6 +193,8 @@ footer a:hover{
     .idolos >div>div p{
         padding: 15px;
     }
+
+
     .rivais >div {
         flex-direction: row;
     }
