--- a/projeto_galo/css/style.css
+++ b/projeto_galo/css/style.css
@@ -4,6 +4,9 @@
     margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
+html, body {
+    overflow-x: hidden;
+}
 body{
     background-color: rgb(65, 65, 65);
 }
@@ -53,7 +56,20 @@ section figcaption{
     color: darkgoldenrod;
     margin-bottom: 10px;
 }
-
+.br21{
+    text-align: center;
+}
+.br21 h2{
+    color: darkgoldenrod;
+}
+.br21 >div{
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+.br21 p{
+    padding-bottom: 10px;
+}
 .começo div{
     display: flex;
     flex-direction: column;
@@ -119,6 +135,12 @@ section figcaption{
     color: darkgoldenrod;
     text-align: center;
 }
+.segunda figcaption> p{
+    text-align: center;
+}
+.segunda>div{
+    border: 2px solid darkgoldenrod;
+}
 .segunda div{
     display: flex;
     flex-direction: column;
@@ -165,6 +187,18 @@ section figcaption{
     padding: 10px;
     justify-content: center;
 }
+.final >div div{
+    padding:10px;
+}
+.final >div div h2{
+    padding: 10px 0px;
+}
+.final figcaption >p {
+    text-align: center;
+}
+.final .play{
+    border: 2px solid darkgoldenrod;
+}
 
 .rivais>div{
     display: flex;
@@ -191,6 +225,7 @@ footer>div{
     align-items: center;
     background-color: black;
     color: darkgoldenrod;
+
 }
 footer a:link, footer a:visited{
     color: white;
@@ -228,17 +263,38 @@ footer a:hover{
     .inicio h1{
         padding-bottom: 15px;
     }
+    
     .brasileiro>div div{
         flex-direction: row;
+    }
+    .brasileiro>div>div>div{
+        display: flex;
+        flex-direction: column;
+        padding: 15px;
     }
     .segunda >div> div{
         display: flex;
         flex-direction: row;
-        flex-wrap: wrap;
         justify-content: center;
     }
     .segunda {
         padding: 10px;
+    }
+    .segunda> .quartas {
+        display: flex;
+        flex-direction: row;
+    }
+    .segunda> .quartas div{
+        display: flex;
+        flex-direction: column;
+    }
+    .segunda> .semi {
+        display: flex;
+        flex-direction: row;
+    }
+    .segunda> .semi div{
+        display: flex;
+        flex-direction: column;
     }
     .brasil div > .first{
         display: flex;
@@ -254,6 +310,12 @@ footer a:hover{
         display: flex;
         align-items: center;
     }
+    .final .play {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+    
 
     .idolos >div>div {
         display: flex;
